# relais

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEMAP.md  Makefile  README.md  SECURITY.md  pyproject.toml  renovate.json  test_async_generator.py  test_error_handling.py
.cursor/rules/: 10-python.mdc
.github/workflows/: ci.yml  create-release.yml
examples/: README.md  basic_pipeline.py  benchmark_comparison.py  directional_cancellation_demo.py  llm_evaluation_pipeline.py  real_world_advantage.py  simple_benchmark.py  simple_llm_eval.py  streaming_advantage_benchmark.py
src/relais/: __init__.py  base.py  errors.py  index.py  poc.py  processors.py  stream.py  tasks.py
src/relais/steps/: __init__.py  async_iterator.py  async_iterator_step.py  batch.py  batch_step.py  distinct.py  distinct_step.py  filter.py  filter_step.py  flat_map.py  flat_map_step.py  function_step.py  group_by.py  group_by_step.py  iterable_step.py  map.py  map_step.py  reduce.py  reduce_step.py  skip.py  skip_step.py  sort.py  sort_step.py  take.py  take_step.py  value_step.py
test/: test_pipelines.py
tests/: test_advanced_error_propagation.py  test_batch_step.py  test_callbacks.py  test_concurrency.py  test_directional_cancellation.py  test_error_handling.py  test_examples.py  test_filter_step.py  test_flatmap_step.py  test_groupby_step.py  test_index.py  test_iterable_step.py  test_map_step.py  test_memory_efficiency.py  test_performance.py  test_pipeline.py  test_poc.py  test_reduce_step.py  test_skip_step.py  test_sort_step.py  test_stream_reader_writer.py  test_streaming_patterns.py  test_take_step.py  test_unique_step.py
tests/steps/: test_batch.py  test_distinct.py  test_filter.py  test_flat_map.py  test_group_by.py  test_map.py  test_reduce.py  test_skip.py  test_sort.py  test_take.py
