[project]
name = "relais"
version = "1.0.0"
description = "A practical tool for managing async pipelines."
readme = "README.md"
authors = [
    { name = "Matteo", email = "me@mattbit.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "basedpyright==1.31.3",
    "detect-secrets==1.5.0",
    "ipykernel==6.30.1",
    "pip-audit==2.9.0",
    "pre-commit==4.3.0",
    "pytest==8.4.1",
    "pytest-asyncio==1.1.0",
    "ruff==0.12.10",
    "vermin==1.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
