[project]
name = "relais"
version = "0.2.1"
description = "A practical tool for managing async pipelines."
readme = "README.md"
authors = [
    { name = "Matteo", email = "me@mattbit.com" },
    { name = "Kevin Messiaen", email = "kevind.messiaen@gmail.com" }
]
license = {file = "LICENSE"}
keywords = ["async", "streaming", "pipeline", "concurrency", "data-processing", "asyncio", "functional"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed"
]
requires-python = ">=3.11"
dependencies = []

[project.urls]
Homepage = "https://github.com/Giskard-AI/relais"
Repository = "https://github.com/Giskard-AI/relais"
Issues = "https://github.com/Giskard-AI/relais/issues"
Changelog = "https://github.com/Giskard-AI/relais/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "basedpyright==1.37.1",
    "detect-secrets==1.5.0",
    "ipykernel==6.31.0",
    "pip-audit==2.9.0",
    "pre-commit==4.5.1",
    "pytest==8.4.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==5.0.0",
    "ruff==0.14.11",
    "vermin==1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--cov=src/relais",
    "--cov-report=term",
    "--cov-report=html",
    "--maxfail=1",
    "-q",
]

[tool.ruff.lint]
# D = pydocstyle
# I = isort
# E, W = error/warning pycodestyle (E, W)
# F401: [unused-import](https://docs.astral.sh/ruff/rules/unused-import/)
select = ["E", "W", "I", "D", "F401"]
ignore = ["E501"]  # E501	line-too-long	Line too long ({width} > {limit})

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]
"examples/**/*.py" = ["D"]

[tool.pyright]
failOnWarnings = false
typeCheckingMode = "recommended"
reportImportCycles = "warning"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
fail_under = 80

[tool.hatch.build.targets.wheel]
packages = ["src/relais"]

[tool.hatch.build.targets.wheel.force-include]
"src/relais/py.typed" = "relais/py.typed"
